--- a/Applications/RayWalk/Worlds/SundownBeams/Player.cfg
+++ b/Applications/RayWalk/Worlds/SundownBeams/Player.cfg
@@ -3,6 +3,11 @@
 		x = 5,
 		y = 5,
 	},
+	isCrouched = false,
+	jumpHeight = 10,
+	moveSpeed = 16,
+	rotationSpeed = 5,
+	crouchHeight = 10,
 	fieldOfView = 60,
 	rotation = 0,
 }
