ебать коммит, блядь

--- a/Applications/RayWalk/Worlds/ExampleWorld/Player.cfg
+++ b/Applications/RayWalk/Worlds/ExampleWorld/Player.cfg
@@ -3,6 +3,10 @@
 		x = 5,
 		y = 5,
 	},
+	health = {
+		maximum = 100,
+		current = 100,
+	},
 	isCrouched = false,
 	jumpHeight = 10,
 	moveSpeed = 16,
