--- a/Applications/RayWalk/RayEngine.cfg
+++ b/Applications/RayWalk/RayEngine.cfg
@@ -2,4 +2,22 @@
 	tileWidth = 32,
 	drawDistance = 1000,
 	raycastQuality = 0.2,
+	shadingCascades = 8,
+	shadingDistance = 0.5,
+	shadingTransparencyMap = {
+		51,
+		102,
+		153,
+		204,
+		255,
+		255,
+		255,
+		204,
+		204,
+		179,
+		153,
+		128,
+		102,
+		77,
+	},
 }
