--- a/Applications/RayWalk/Weapons/Weapons.cfg
+++ b/Applications/RayWalk/Weapons/Weapons.cfg
@@ -32,4 +32,15 @@
 		},
 		crosshairTexture = "CrosshairTextures/Angled.pic",
 	},
+	{
+		name = "Plasmer",
+		damage = 80,
+		weaponTexture = "WeaponTextures/Plasmer.pic",
+		fireTexture = "FireTextures/Plasma.pic",
+		firePosition = {
+			x = 1,
+			y = -2,
+		},
+		crosshairTexture = "CrosshairTextures/Dotted.pic",
+	},
 }
