--- a/Applications/RayWalk/Worlds/SundownBeams/World.cfg
+++ b/Applications/RayWalk/Worlds/SundownBeams/World.cfg
@@ -1,9 +1,9 @@
 {
 	dayNightCycle = {
-		enabled = false,
-		currentTime = 150,
+		enabled = true,
+		currentTime = 100,
 		speed = 1,
-		length = 200,
+		length = 300,
 	},
 	colors = {
 		ground = 0xEEEEEE,
@@ -23,37 +23,6 @@
 			0xCCBD00,
 			0x000080,
 			0x002440,
-		},
-		brightnessMultiplyer = {
-			20,
-			40,
-			60,
-			80,
-			100,
-			100,
-			100,
-			80,
-			80,
-			70,
-			60,
-			50,
-			40,
-			30,
-		},
-		tile = {
-			0x000000,
-			0x111111,
-			0x222222,
-			0x333333,
-			0x444444,
-			0x555555,
-			0x666666,
-			0x777777,
-			0x888888,
-			0x999999,
-			0xAAAAAA,
-			0xBBBBBB,
-			0xCCCCCC,
 		},
 	},
 }
