--- a/Applications/RayWalk/Worlds/SundownBeams/Blocks.cfg
+++ b/Applications/RayWalk/Worlds/SundownBeams/Blocks.cfg
@@ -1,6 +1,10 @@
 {
 	{
 		color = 0xFFFFFF,
+		canBeDestroyed = false,
+	},
+	{
+		color = 0xFFFFFF,
 		canBeDestroyed = true,
 	},
 	{
@@ -8,7 +12,15 @@
 		canBeDestroyed = true,
 	},
 	{
-		color = 0x55FF55,
+		color = 0x88FF88,
+		canBeDestroyed = true,
+	},
+	{
+		color = 0xFF88FF,
+		canBeDestroyed = true,
+	},
+	{
+		color = 0xFFEE60,
 		canBeDestroyed = true,
 	},
 }
