Начинаем масштабный апдейт ОСи

--- a/Applications/RayWalk/RayEngine.cfg
+++ b/Applications/RayWalk/RayEngine.cfg
@@ -1,23 +1,28 @@
 {
-	tileWidth = 32,
-	drawDistance = 1000,
-	raycastQuality = 0.2,
-	shadingCascades = 8,
-	shadingDistance = 0.5,
-	shadingTransparencyMap = {
-		51,
-		102,
-		153,
-		204,
-		255,
-		255,
-		255,
-		204,
-		204,
-		179,
-		153,
-		128,
-		102,
-		77,
-	},
+  ["useSimpleRenderer"] = true,
+  ["shadingCascades"] = 8,
+  ["shadingDistance"] = 500,
+  ["shadingTransparencyMap"] = {
+    [12] = 128,
+    [6] = 255,
+    [13] = 102,
+    [1] = 51,
+    [3] = 153,
+    [7] = 255,
+    [8] = 204,
+    [4] = 204,
+    [9] = 204,
+    [14] = 77,
+    [2] = 102,
+    [5] = 255,
+    [11] = 153,
+    [10] = 179
+  },
+  ["raycastQuality"] = 6.4,
+  ["screenResolution"] = {
+    ["width"] = 160,
+    ["height"] = 50
+  },
+  ["drawDistance"] = 1000,
+  ["tileWidth"] = 32
 }
