--- a/Applications/RayWalk/Worlds/ExampleWorld/Player.cfg
+++ b/Applications/RayWalk/Worlds/ExampleWorld/Player.cfg
@@ -10,8 +10,8 @@
 	isCrouched = false,
 	jumpHeight = 10,
 	moveSpeed = 16,
-	rotationSpeed = 5,
+	rotationSpeed = 0.0872664,
 	crouchHeight = 10,
-	fieldOfView = 60,
+	fieldOfView = 1.0471975,
 	rotation = 0,
 }
