Скринсейвер Vigilo Confido

--- a/Applications.cfg
+++ b/Applications.cfg
@@ -449,6 +449,13 @@
 		forceDownload=true,
 		version=1.00,
 	},
+	{
+		path="/MineOS/System/Screensavers/XCOM.lua",
+		url="https://raw.githubusercontent.com/IgorTimofeev/OpenComputers/master/Screensavers/XCOM.lua",
+		type="Script",
+		forceDownload=true,
+		version=1.00,
+	},
 	----------------------------------------------------- Приложения --------------------------------------------------------------------------
 	{
 		path="/MineOS/Applications/MineCode IDE",
