--- a/Applications.cfg
+++ b/Applications.cfg
@@ -333,6 +333,7 @@
 		path="/lib/syntax.lua",
 		url="https://raw.githubusercontent.com/IgorTimofeev/OpenComputers/master/lib/syntax.lua",
 		type="Library",
+		preloadFile=true,
 		version=1.17,
 	},
 	{
