--- a/Files.cfg
+++ b/Files.cfg
@@ -42,6 +42,11 @@
 		},
 	},
 	duringInstall = {
+		-- Оська
+		{
+			path="/bin/OS.lua",
+			url="https://raw.githubusercontent.com/IgorTimofeev/OpenComputers/master/OS.lua"
+		},
 		-- Либы
 		{
 			path="/lib/MineOSNetwork.lua",
