--- a/Files.cfg
+++ b/Files.cfg
@@ -72,6 +72,10 @@
 			path="/lib/SHA2.lua",
 			url="https://raw.githubusercontent.com/IgorTimofeev/OpenComputers/master/lib/SHA2.lua"
 		},
+		{
+			path="/lib/ECSAPI.lua",
+			url="https://raw.githubusercontent.com/IgorTimofeev/OpenComputers/master/lib/ECSAPI.lua"
+		},
 		-- Скрипты
 		{
 			path="/OS.lua",
