--- a/Files.cfg
+++ b/Files.cfg
@@ -394,6 +394,11 @@
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/Weather/Icon.pic",
 		},
 		{
+			path="/lib/json.lua",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/lib/json.lua",
+			fileID=103,
+		},
+		{
 			path="/MineOS/Applications/Weather.app/Stormy.pic",
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/Weather/Stormy.pic",
 		},
