Возвращение приложения 3DPrint #4

--- a/Files.cfg
+++ b/Files.cfg
@@ -433,6 +433,18 @@
 			path="/MineOS/Applications/3D Print.app/Icon.pic",
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/3DPrint/Icon.pic",
 		},
+		{
+			path="/MineOS/Applications/3D Print.app/Localizations/English.lang",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/3D Print/Localizations/English.lang",
+		},
+		{
+			path="/MineOS/Applications/3D Print.app/Localizations/Russian.lang",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/3D Print/Localizations/Russian.lang",
+		},
+		{
+			path="/MineOS/Applications/3D Print.app/Localizations/French.lang",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/3D Print/Localizations/French.lang",
+		},
 		-- Weather
 		{
 			path="/MineOS/Applications/Weather.app/Main.lua",
