--- a/Files.cfg
+++ b/Files.cfg
@@ -125,6 +125,11 @@
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Extensions/Arc/Launcher.lua",
 			fileID=153,
 		},
+		{
+			path="/MineOS/System/Extensions/3dm/ContextMenu.lua",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Extensions/3dm/ContextMenu.lua",
+			fileID=870,
+		},
 		-- Системные иконки
 		{
 			path="/MineOS/System/Icons/Application.pic",
