Removed custom event library until MineOSStandalone release for compatibility with newest OpenOS version

--- a/Files.cfg
+++ b/Files.cfg
@@ -84,11 +84,11 @@
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/lib/MineOSInterface.lua",
 			fileID=109,
 		},
-		{
-			path="/lib/event.lua",
-			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/lib/event.lua",
-			fileID=102,
-		},
+		-- {
+		-- 	path="/lib/event.lua",
+		-- 	url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/lib/event.lua",
+		-- 	fileID=102,
+		-- },
 		{
 			path="/lib/FormatModules/OCAF.lua",
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/lib/FormatModules/OCAF.lua",
