Added "Calculator" application for future testing #2

--- a/Files.cfg
+++ b/Files.cfg
@@ -570,6 +570,17 @@
 			path="/MineOS/Applications/Weather.app/Stormy.pic",
 			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/Weather/Stormy.pic",
 		},
+		-- Calculator
+		{
+			path="/MineOS/Applications/Calculator.app/Main.lua",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/Calculator/Main.lua",
+			fileID=1045,
+			createShortcut = true,
+		},
+		{
+			path="/MineOS/Applications/Calculator.app/Icon.pic",
+			url="https://raw.githubusercontent.com/IgorTimofeev/MineOS/master/Applications/Calculator/Icon.pic",
+		},
 		-- Fuck the rain
 		{
 			path="/MineOS/Applications/Fuck the rain.app/Main.lua",
