--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -130,6 +130,9 @@
 		"Applications/Settings.app/Modules/7_Time/Icon.pic",
 		"Applications/Settings.app/Modules/8_System/Main.lua",
 		"Applications/Settings.app/Modules/8_System/Icon.pic",
+		-- Reinstall OS
+		{ path="Applications/Reinstall OS.app/Main.lua", shortcut = true },
+		"Applications/Reinstall OS.app/Icon.pic",
 	},
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
