--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -3,6 +3,7 @@
 		"Libraries/Event.lua",
 		"Libraries/Keyboard.lua",
 		"Libraries/Filesystem.lua",
+		"Libraries/Bit32.lua",
 		"Libraries/Color.lua",
 		"Libraries/Image.lua",
 		"Libraries/Screen.lua",
