Added machine translation for German OS language

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -24,6 +24,7 @@
 	localizations = {
 		"Localizations/English.lang",
 		"Localizations/Russian.lang",
+		"Localizations/German.lang",
 		"Localizations/French.lang",
 		"Localizations/Ukrainian.lang",
 	},
