--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -44,7 +44,7 @@
 		{ path="Libraries/GUI.lua" },
 		{ path="Libraries/System.lua" },
 		{ path="Libraries/Network.lua" },
-		{ path="Libraries/Archive.lua" },
+		{ path="Libraries/Compressor.lua" },
 		{ path="Libraries/SHA-256.lua" },
 		{ path="Libraries/Internet.lua" },
 		-- Scripts
