--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -50,11 +50,11 @@
 		-- Scripts
 		{ path="OS.lua", id=106 },
 		-- Extensions
-		"Extensions/Lua/ContextMenu.lua",
+		"Extensions/Lua/Context menu.lua",
 		"Extensions/Lua/Launcher.lua",
-		"Extensions/Pic/ContextMenu.lua",
-		"Extensions/Arc/Launcher.lua",
-		"Extensions/3dm/ContextMenu.lua",
+		"Extensions/Pic/Context menu.lua",
+		"Extensions/Pkg/Launcher.lua",
+		"Extensions/3dm/Context menu.lua",
 		-- System icons
 		"Icons/3DModel.pic",
 		"Icons/Application.pic",
