--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -24,8 +24,9 @@
 	localizations = {
 		"Localizations/English.lang",
 		"Localizations/Russian.lang",
-		"Localizations/German.lang",
 		"Localizations/French.lang",
+		"Localizations/German.lang",
+		"Localizations/Italian.lang",
 		"Localizations/Ukrainian.lang",
 	},
 	required = {
