Added localization file icon

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -71,6 +71,7 @@
 		"Icons/Text.pic",
 		"Icons/Trash.pic",
 		"Icons/User.pic",
+		"Icons/Localization.pic",
 		-- Sample
 		"Applications/Sample.app/Main.lua",
 		"Applications/Sample.app/Icon.pic",
