File extension binding feature. File -> open with -> my app <333

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -50,28 +50,16 @@
 		{ path="Libraries/Internet.lua" },
 		-- Scripts
 		{ path="OS.lua", id=106 },
-		-- Extensions
-		"Extensions/Lua/Context menu.lua",
-		"Extensions/Lua/Launcher.lua",
-		"Extensions/Pic/Context menu.lua",
-		"Extensions/Pkg/Launcher.lua",
-		"Extensions/3dm/Context menu.lua",
 		-- System icons
-		"Icons/3DModel.pic",
 		"Icons/Application.pic",
 		"Icons/Archive.pic",
-		"Icons/Config.pic",
 		"Icons/FileNotExists.pic",
 		"Icons/Floppy.pic",
 		"Icons/Folder.pic",
 		"Icons/HDD.pic",
-		"Icons/Image.pic",
-		"Icons/Lua.pic",
 		"Icons/Script.pic",
-		"Icons/Text.pic",
 		"Icons/Trash.pic",
 		"Icons/User.pic",
-		"Icons/Localization.pic",
 		-- Sample
 		"Applications/Sample.app/Main.lua",
 		"Applications/Sample.app/Icon.pic",
@@ -93,6 +81,11 @@
 		"Applications/MineCode IDE.app/Localizations/English.lang",
 		"Applications/MineCode IDE.app/Localizations/French.lang",
 		"Applications/MineCode IDE.app/Localizations/Ukrainian.lang",
+		"Applications/MineCode IDE.app/Extensions/.txt/Icon.pic",
+		"Applications/MineCode IDE.app/Extensions/.cfg/Icon.pic",
+		"Applications/MineCode IDE.app/Extensions/.lang/Icon.pic",
+		"Applications/MineCode IDE.app/Extensions/.lua/Icon.pic",
+		"Applications/MineCode IDE.app/Extensions/.lua/Context menu.lua",
 		-- Picture Edit
 		{ path="Applications/Picture Edit.app/Main.lua", id=798 },
 		"Applications/Picture Edit.app/Icon.pic",
@@ -104,6 +97,7 @@
 		"Applications/Picture Edit.app/Tools/6.lua",
 		"Applications/Picture Edit.app/Tools/7.lua",
 		"Applications/Picture Edit.app/Tools/8.lua",
+		"Applications/Picture Edit.app/Extensions/.pic/Icon.pic",
 		-- Finder
 		{ path="Applications/Finder.app/Main.lua", id=175 },
 		"Applications/Finder.app/Icon.pic",
@@ -153,6 +147,7 @@
 		"Applications/3D Print.app/Localizations/Russian.lang",
 		"Applications/3D Print.app/Localizations/French.lang",
 		"Applications/3D Print.app/Localizations/Ukrainian.lang",
+		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
 		-- Weather
 		{ path="Applications/Weather.app/Main.lua", id=240, shortcut = true },
 		"Applications/Weather.app/Icon.pic",
