--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -97,6 +97,7 @@
 		"Applications/Picture Edit.app/Tools/6.lua",
 		"Applications/Picture Edit.app/Tools/7.lua",
 		"Applications/Picture Edit.app/Tools/8.lua",
+		"Applications/Picture Edit.app/Tools/9.lua",
 		"Applications/Picture Edit.app/Extensions/.pic/Icon.pic",
 		-- Finder
 		{ path="Applications/Finder.app/Main.lua", id=175 },
