--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -67,25 +67,34 @@
 		"Applications/Sample.app/Localizations/English.lang",
 		"Applications/Sample.app/Localizations/French.lang",
 		"Applications/Sample.app/Localizations/Ukrainian.lang",
+		"Applications/Sample.app/Localizations/German.lang",
+		"Applications/Sample.app/Localizations/Italian.lang",
 		-- App market
 		{ path="Applications/App Market.app/Main.lua", id=164 },
 		"Applications/App Market.app/Icon.pic",
+		"Applications/App Market.app/Icons/Lua.pic",
+		"Applications/App Market.app/Icons/Script.pic",
+		"Applications/App Market.app/Icons/FileNotExists.pic",
 		"Applications/App Market.app/Localizations/Russian.lang",
 		"Applications/App Market.app/Localizations/English.lang",
 		"Applications/App Market.app/Localizations/French.lang",
 		"Applications/App Market.app/Localizations/Ukrainian.lang",
+		"Applications/App Market.app/Localizations/German.lang",
+		"Applications/App Market.app/Localizations/Italian.lang",
 		-- MineCode IDE
 		{ path="Applications/MineCode IDE.app/Main.lua", id=169 },
 		"Applications/MineCode IDE.app/Icon.pic",
-		"Applications/MineCode IDE.app/Localizations/Russian.lang",
-		"Applications/MineCode IDE.app/Localizations/English.lang",
-		"Applications/MineCode IDE.app/Localizations/French.lang",
-		"Applications/MineCode IDE.app/Localizations/Ukrainian.lang",
 		"Applications/MineCode IDE.app/Extensions/.txt/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.cfg/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.lang/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.lua/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.lua/Context menu.lua",
+		"Applications/MineCode IDE.app/Localizations/Russian.lang",
+		"Applications/MineCode IDE.app/Localizations/English.lang",
+		"Applications/MineCode IDE.app/Localizations/French.lang",
+		"Applications/MineCode IDE.app/Localizations/Ukrainian.lang",
+		"Applications/MineCode IDE.app/Localizations/German.lang",
+		"Applications/MineCode IDE.app/Localizations/Italian.lang",
 		-- Picture Edit
 		{ path="Applications/Picture Edit.app/Main.lua", id=798 },
 		"Applications/Picture Edit.app/Icon.pic",
@@ -105,10 +114,6 @@
 		-- Settings
 		{ path="Applications/Settings.app/Main.lua", id=909 },
 		"Applications/Settings.app/Icon.pic",
-		"Applications/Settings.app/Localizations/English.lang",
-		"Applications/Settings.app/Localizations/Russian.lang",
-		"Applications/Settings.app/Localizations/French.lang",
-		"Applications/Settings.app/Localizations/Ukrainian.lang",
 		"Applications/Settings.app/Modules/0_Screen/Main.lua",
 		"Applications/Settings.app/Modules/0_Screen/Icon.pic",
 		"Applications/Settings.app/Modules/1_Wallpaper/Main.lua",
@@ -129,9 +134,12 @@
 		"Applications/Settings.app/Modules/7_Time/Icon.pic",
 		"Applications/Settings.app/Modules/8_System/Main.lua",
 		"Applications/Settings.app/Modules/8_System/Icon.pic",
-		-- Reinstall OS
-		{ path="Applications/Reinstall OS.app/Main.lua", shortcut = true },
-		"Applications/Reinstall OS.app/Icon.pic",
+		"Applications/Settings.app/Localizations/Russian.lang",
+		"Applications/Settings.app/Localizations/English.lang",
+		"Applications/Settings.app/Localizations/French.lang",
+		"Applications/Settings.app/Localizations/Ukrainian.lang",
+		"Applications/Settings.app/Localizations/German.lang",
+		"Applications/Settings.app/Localizations/Italian.lang",
 	},
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
@@ -141,6 +149,9 @@
 		{ path="Libraries/OpenComputersGL/Renderer.lua", id=338 },
 		{ path="Libraries/OpenComputersGL/Materials.lua", id=339 },
 		{ path="Libraries/Vector.lua", id=520 },
+		-- Reinstall OS
+		{ path="Applications/Reinstall OS.app/Main.lua", shortcut = true },
+		"Applications/Reinstall OS.app/Icon.pic",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
