Added Lua interpreter application #2

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -152,6 +152,9 @@
 		-- Reinstall OS
 		{ path="Applications/Reinstall OS.app/Main.lua", shortcut = true },
 		"Applications/Reinstall OS.app/Icon.pic",
+		-- Lua interpreter
+		{ path="Applications/Lua.app/Main.lua", shortcut = true },
+		"Applications/Lua.app/Icon.pic",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
