Reworked AppMarket version system for cross-user updating

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -31,23 +31,23 @@
 	},
 	required = {
 		-- Libraries
-		{ path="Libraries/Bit32.lua" },
-		{ path="Libraries/Component.lua" },
-		{ path="Libraries/Event.lua" },
-		{ path="Libraries/Keyboard.lua" },
-		{ path="Libraries/Filesystem.lua" },
-		{ path="Libraries/Color.lua" },
-		{ path="Libraries/Image.lua" },
-		{ path="Libraries/Screen.lua" },
-		{ path="Libraries/Paths.lua" },
-		{ path="Libraries/Text.lua" },
-		{ path="Libraries/Number.lua" },
-		{ path="Libraries/GUI.lua" },
-		{ path="Libraries/System.lua" },
-		{ path="Libraries/Network.lua" },
-		{ path="Libraries/Compressor.lua" },
-		{ path="Libraries/SHA-256.lua" },
-		{ path="Libraries/Internet.lua" },
+		{ path="Libraries/Bit32.lua", id=1062 },
+		{ path="Libraries/Component.lua", id=1061 },
+		{ path="Libraries/Event.lua", id=950 },
+		{ path="Libraries/Keyboard.lua", id=1065 },
+		{ path="Libraries/Filesystem.lua", id=1063 },
+		{ path="Libraries/Color.lua", id=92 },
+		{ path="Libraries/Image.lua", id=73 },
+		{ path="Libraries/Screen.lua", id=97 },
+		{ path="Libraries/Paths.lua", id=1068 },
+		{ path="Libraries/Text.lua", id=1059 },
+		{ path="Libraries/Number.lua", id=1060 },
+		{ path="Libraries/GUI.lua", id=100 },
+		{ path="Libraries/System.lua", id=108 },
+		{ path="Libraries/Network.lua", id=253 },
+		{ path="Libraries/Compressor.lua", id=1079 },
+		{ path="Libraries/SHA-256.lua", id=104 },
+		{ path="Libraries/Internet.lua", id=1095 },
 		-- Scripts
 		{ path="OS.lua", id=106 },
 		-- System icons
@@ -61,7 +61,7 @@
 		"Icons/Trash.pic",
 		"Icons/User.pic",
 		-- Sample
-		"Applications/Sample.app/Main.lua",
+		{ path="Applications/Sample.app/Main.lua", id=1096 },
 		"Applications/Sample.app/Icon.pic",
 		"Applications/Sample.app/Localizations/Russian.lang",
 		"Applications/Sample.app/Localizations/English.lang",
@@ -144,16 +144,16 @@
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
 		{ path="Libraries/BigLetters.lua", id=391 },
-		{ path="Libraries/MeowEngine/Main.lua", id=340 },
-		{ path="Libraries/OpenComputersGL/Main.lua", id=337 },
-		{ path="Libraries/OpenComputersGL/Renderer.lua", id=338 },
-		{ path="Libraries/OpenComputersGL/Materials.lua", id=339 },
-		{ path="Libraries/Vector.lua", id=520 },
+		"Libraries/MeowEngine/Main.lua",
+		"Libraries/OpenComputersGL/Main.lua",
+		"Libraries/OpenComputersGL/Renderer.lua",
+		"Libraries/OpenComputersGL/Materials.lua",
+		"Libraries/Vector.lua",
 		-- Reinstall OS
-		{ path="Applications/Reinstall OS.app/Main.lua", shortcut = true },
+		{ path="Applications/Reinstall OS.app/Main.lua", id=1055, shortcut = true },
 		"Applications/Reinstall OS.app/Icon.pic",
 		-- Lua interpreter
-		{ path="Applications/Lua.app/Main.lua", shortcut = true },
+		{ path="Applications/Lua.app/Main.lua", id=1077, shortcut = true },
 		"Applications/Lua.app/Icon.pic",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
@@ -176,14 +176,11 @@
 		{ path="Applications/Calculator.app/Main.lua", id=1045, shortcut = true },
 		"Applications/Calculator.app/Icon.pic",
 		-- Christmas tree
-		{ path="Applications/Christmas Tree.app/Main.lua", shortcut = true },
+		{ path="Applications/Christmas Tree.app/Main.lua", id=412, shortcut = true },
 		"Applications/Christmas Tree.app/Icon.pic",
 		-- Fuck the rain
 		{ path="Applications/Fuck the Rain.app/Main.lua", id=506, shortcut = true },
 		"Applications/Fuck the Rain.app/Icon.pic",
-		-- OS Installer
-		{ path="Applications/Reinstall OS.app/Main.lua", shortcut = true },
-		"Applications/Reinstall OS.app/Icon.pic",
 		-- Graph
 		{ path="Applications/Graph.app/Main.lua", id=238, shortcut = true },
 		"Applications/Graph.app/Icon.pic",
