Added Multiscreen and Shooting applications

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -149,6 +149,12 @@
 		"Libraries/OpenComputersGL/Renderer.lua",
 		"Libraries/OpenComputersGL/Materials.lua",
 		"Libraries/Vector.lua",
+		-- Multiscreen
+		{ path="Applications/Multiscreen.app/Main.lua", id=1055, shortcut = true },
+		"Applications/Multiscreen.app/Icon.pic",
+		-- Shooting
+		{ path="Applications/Shooting.app/Main.lua", id=1055, shortcut = true },
+		"Applications/Shooting.app/Icon.pic",
 		-- Reinstall OS
 		{ path="Applications/Reinstall OS.app/Main.lua", id=1055, shortcut = true },
 		"Applications/Reinstall OS.app/Icon.pic",
