--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -224,6 +224,7 @@
 		"Applications/VK.app/Icons/Reposts.pic",
 		"Applications/VK.app/Icons/Comments.pic",
 		"Applications/VK.app/Icons/Views.pic",
+		"Applications/VK.app/Styles/Default.lua",
 		"Applications/VK.app/Styles/Bright.lua",
 		"Applications/VK.app/Styles/Dark.lua",
 	},
