Added 3D Print system integration / switched app to windowed mode

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -140,6 +140,15 @@
 		"Applications/Settings.app/Localizations/Ukrainian.lang",
 		"Applications/Settings.app/Localizations/German.lang",
 		"Applications/Settings.app/Localizations/Italian.lang",
+		-- 3D Print
+		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
+		"Applications/3D Print.app/Icon.pic",
+		"Applications/3D Print.app/Localizations/English.lang",
+		"Applications/3D Print.app/Localizations/Russian.lang",
+		"Applications/3D Print.app/Localizations/French.lang",
+		"Applications/3D Print.app/Localizations/Ukrainian.lang",
+		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
+		"Applications/3D Print.app/Extensions/.3dm/Context menu.lua",
 	},
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
@@ -161,14 +170,6 @@
 		-- Lua interpreter
 		{ path="Applications/Lua.app/Main.lua", id=1077, shortcut = true },
 		"Applications/Lua.app/Icon.pic",
-		-- 3D Print
-		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
-		"Applications/3D Print.app/Icon.pic",
-		"Applications/3D Print.app/Localizations/English.lang",
-		"Applications/3D Print.app/Localizations/Russian.lang",
-		"Applications/3D Print.app/Localizations/French.lang",
-		"Applications/3D Print.app/Localizations/Ukrainian.lang",
-		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
 		-- Weather
 		{ path="Applications/Weather.app/Main.lua", id=240, shortcut = true },
 		"Applications/Weather.app/Icon.pic",
