Added 3D Print system integration / switched app to windowed mode #2

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -48,6 +48,7 @@
 		{ path="Libraries/Compressor.lua", id=1079 },
 		{ path="Libraries/SHA-256.lua", id=104 },
 		{ path="Libraries/Internet.lua", id=1095 },
+		{ path="Libraries/BigLetters.lua", id=391 },
 		-- Scripts
 		{ path="OS.lua", id=106 },
 		-- System icons
@@ -143,6 +144,7 @@
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
+		"Applications/3D Print.app/Sample.3dm",
 		"Applications/3D Print.app/Localizations/English.lang",
 		"Applications/3D Print.app/Localizations/Russian.lang",
 		"Applications/3D Print.app/Localizations/French.lang",
@@ -152,7 +154,6 @@
 	},
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
-		{ path="Libraries/BigLetters.lua", id=391 },
 		"Libraries/MeowEngine/Main.lua",
 		"Libraries/OpenComputersGL/Main.lua",
 		"Libraries/OpenComputersGL/Renderer.lua",
