Added SpaceX screesaver (thanks, Maxu5!), fixed "Launch with arguments" option for .lua files

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -244,6 +244,7 @@
 		"Pictures/Space.pic",
 	},
 	screensavers = {
+		"Screensavers/Space.lua",
 		"Screensavers/Matrix.lua",
 		"Screensavers/Mandala.lua",
 		"Screensavers/Clock.lua",
