--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -28,6 +28,7 @@
 		"Localizations/German.lang",
 		"Localizations/Italian.lang",
 		"Localizations/Ukrainian.lang",
+		"Localizations/Bulgarian.lang",
 	},
 	required = {
 		-- Libraries
