--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -29,6 +29,7 @@
 		"Localizations/Italian.lang",
 		"Localizations/Ukrainian.lang",
 		"Localizations/Bulgarian.lang",
+		"Localizations/Japanese.lang",
 	},
 	required = {
 		-- Libraries
@@ -142,6 +143,7 @@
 		"Applications/Settings.app/Localizations/Ukrainian.lang",
 		"Applications/Settings.app/Localizations/German.lang",
 		"Applications/Settings.app/Localizations/Italian.lang",
+		"Applications/Settings.app/Localizations/Japanese.lang",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
