--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -73,6 +73,7 @@
 		"Applications/Sample.app/Localizations/Ukrainian.lang",
 		"Applications/Sample.app/Localizations/German.lang",
 		"Applications/Sample.app/Localizations/Italian.lang",
+		"Applications/Sample.app/Localizations/Dutch.lang",
 		-- App market
 		{ path="Applications/App Market.app/Main.lua", id=164 },
 		"Applications/App Market.app/Icon.pic",
@@ -85,6 +86,7 @@
 		"Applications/App Market.app/Localizations/Ukrainian.lang",
 		"Applications/App Market.app/Localizations/German.lang",
 		"Applications/App Market.app/Localizations/Italian.lang",
+		"Applications/App Market.app/Localizations/Dutch.lang",
 		-- MineCode IDE
 		{ path="Applications/MineCode IDE.app/Main.lua", id=169 },
 		"Applications/MineCode IDE.app/Icon.pic",
@@ -99,6 +101,7 @@
 		"Applications/MineCode IDE.app/Localizations/Ukrainian.lang",
 		"Applications/MineCode IDE.app/Localizations/German.lang",
 		"Applications/MineCode IDE.app/Localizations/Italian.lang",
+		"Applications/MineCode IDE.app/Localizations/Dutch.lang",
 		-- Picture Edit
 		{ path="Applications/Picture Edit.app/Main.lua", id=798 },
 		"Applications/Picture Edit.app/Icon.pic",
@@ -145,6 +148,7 @@
 		"Applications/Settings.app/Localizations/German.lang",
 		"Applications/Settings.app/Localizations/Italian.lang",
 		"Applications/Settings.app/Localizations/Japanese.lang",
+		"Applications/Settings.app/Localizations/Dutch.lang",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
@@ -155,6 +159,7 @@
 		"Applications/3D Print.app/Localizations/Italian.lang",
 		"Applications/3D Print.app/Localizations/German.lang",
 		"Applications/3D Print.app/Localizations/Ukrainian.lang",
+		"Applications/3D Print.app/Localizations/Dutch.lang",
 		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
 		"Applications/3D Print.app/Extensions/.3dm/Context menu.lua",
 	},
@@ -223,11 +228,13 @@
 		"Applications/Nanomachines.app/Localizations/Russian.lang",
 		"Applications/Nanomachines.app/Localizations/French.lang",
 		"Applications/Nanomachines.app/Localizations/Ukrainian.lang",
+		"Applications/Nanomachines.app/Localizations/Dutch.lang",
 		-- VK
 		{ path="Applications/VK.app/Main.lua", id=952, shortcut = true },
 		"Applications/VK.app/Icon.pic",
 		"Applications/VK.app/Localizations/English.lang",
 		"Applications/VK.app/Localizations/Russian.lang",
+		"Applications/VK.app/Localizations/Dutch.lang",
 		"Applications/VK.app/Icons/Likes.pic",
 		"Applications/VK.app/Icons/Reposts.pic",
 		"Applications/VK.app/Icons/Comments.pic",
