--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -31,6 +31,7 @@
 		"Localizations/Ukrainian.lang",
 		"Localizations/Bulgarian.lang",
 		"Localizations/Japanese.lang",
+		"Localizations/Chinese.lang",
 	},
 	required = {
 		-- Libraries
@@ -160,6 +161,7 @@
 		"Applications/3D Print.app/Localizations/German.lang",
 		"Applications/3D Print.app/Localizations/Ukrainian.lang",
 		"Applications/3D Print.app/Localizations/Dutch.lang",
+		"Applications/3D Print.app/Localizations/Chinese.lang",
 		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
 		"Applications/3D Print.app/Extensions/.3dm/Context menu.lua",
 	},
