--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -30,6 +30,7 @@
 		"Localizations/Dutch.lang",
 		"Localizations/Ukrainian.lang",
 		"Localizations/Bulgarian.lang",
+		"Localizations/Slovak.lang",
 		"Localizations/Japanese.lang",
 		"Localizations/Chinese.lang",
 	},
@@ -160,6 +161,7 @@
 		"Applications/3D Print.app/Localizations/Italian.lang",
 		"Applications/3D Print.app/Localizations/German.lang",
 		"Applications/3D Print.app/Localizations/Ukrainian.lang",
+		"Applications/3D Print.app/Localizations/Slovak.lang",
 		"Applications/3D Print.app/Localizations/Dutch.lang",
 		"Applications/3D Print.app/Localizations/Chinese.lang",
 		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
