--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -33,6 +33,7 @@
 		"Localizations/Slovak.lang",
 		"Localizations/Japanese.lang",
 		"Localizations/Chinese.lang",
+		"Localizations/Korean.lang",
 	},
 	required = {
 		-- Libraries
