--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -27,6 +27,7 @@
 		"Localizations/French.lang",
 		"Localizations/German.lang",
 		"Localizations/Italian.lang",
+		"Localizations/Finnish.lang",
 		"Localizations/Dutch.lang",
 		"Localizations/Ukrainian.lang",
 		"Localizations/Bulgarian.lang",
