--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -35,7 +35,12 @@
 		"Localizations/Japanese.lang",
 		"Localizations/Chinese.lang",
 		"Localizations/Korean.lang",
-                "Localizations/Spanish.lang",
+		"Localizations/Spanish.lang",
+		"Localizations/Arabic.lang",
+		"Localizations/Bengali.lang",
+		"Localizations/Hindi.lang",
+		"Localizations/Lolcat.lang",
+		"Localizations/Portugese.lang"
 	},
 	required = {
 		-- Libraries
