fix typo which prevents system installation

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -40,7 +40,7 @@
 		"Localizations/Bengali.lang",
 		"Localizations/Hindi.lang",
 		"Localizations/Lolcat.lang",
-		"Localizations/Portugese.lang"
+		"Localizations/Portuguese.lang"
 	},
 	required = {
 		-- Libraries
