Add Polish.lang to list of localizations
aaah it's scary to even touch this, but everything should be good.

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -40,7 +40,8 @@
 		"Localizations/Bengali.lang",
 		"Localizations/Hindi.lang",
 		"Localizations/Lolcat.lang",
-		"Localizations/Portuguese.lang"
+		"Localizations/Portuguese.lang",
+		"Localizations/Polish.lang"
 	},
 	required = {
 		-- Libraries
