--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -92,6 +92,7 @@
 		"Applications/App Market.app/Icons/Lua.pic",
 		"Applications/App Market.app/Icons/Script.pic",
 		"Applications/App Market.app/Icons/FileNotExists.pic",
+		"Applications/App Market.app/Localizations/Chinese.lang",
 		"Applications/App Market.app/Localizations/Russian.lang",
 		"Applications/App Market.app/Localizations/English.lang",
 		"Applications/App Market.app/Localizations/French.lang",
@@ -108,6 +109,7 @@
 		"Applications/MineCode IDE.app/Extensions/.lang/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.lua/Icon.pic",
 		"Applications/MineCode IDE.app/Extensions/.lua/Context menu.lua",
+		"Applications/MineCode IDE.app/Localizations/Chinese.lang",
 		"Applications/MineCode IDE.app/Localizations/Russian.lang",
 		"Applications/MineCode IDE.app/Localizations/English.lang",
 		"Applications/MineCode IDE.app/Localizations/Spanish.lang",
