--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -157,6 +157,7 @@
 		"Applications/Settings.app/Modules/7_Time/Icon.pic",
 		"Applications/Settings.app/Modules/8_System/Main.lua",
 		"Applications/Settings.app/Modules/8_System/Icon.pic",
+		"Applications/Settings.app/Localizations/Chinese.lang",
 		"Applications/Settings.app/Localizations/Russian.lang",
 		"Applications/Settings.app/Localizations/English.lang",
 		"Applications/Settings.app/Localizations/Spanish.lang",
