--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -78,6 +78,7 @@
 		-- Sample
 		{ path="Applications/Sample.app/Main.lua", id=1096 },
 		"Applications/Sample.app/Icon.pic",
+		"Applications/Sample.app/Localizations/Chinese.lang",
 		"Applications/Sample.app/Localizations/Russian.lang",
 		"Applications/Sample.app/Localizations/English.lang",
 		"Applications/Sample.app/Localizations/French.lang",
@@ -171,6 +172,7 @@
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
 		"Applications/3D Print.app/Sample.3dm",
+		"Applications/3D Print.app/Localizations/Chinese.lang",
 		"Applications/3D Print.app/Localizations/English.lang",
 		"Applications/3D Print.app/Localizations/Russian.lang",
 		"Applications/3D Print.app/Localizations/French.lang",
