--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -246,6 +246,7 @@
 		-- Nanomachines
 		{ path="Applications/Nanomachines.app/Main.lua", id=938, shortcut = true },
 		"Applications/Nanomachines.app/Icon.pic",
+		"Applications/Nanomachines.app/Localizations/Chinese.lang",
 		"Applications/Nanomachines.app/Localizations/English.lang",
 		"Applications/Nanomachines.app/Localizations/Spanish.lang",
 		"Applications/Nanomachines.app/Localizations/Russian.lang",
