--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -13,6 +13,7 @@
 		"Libraries/GUI.lua",
 		"Libraries/System.lua",
 		"Libraries/SHA-256.lua",
+		"Libraries/CRC32.lua",
 		"Installer/Pictures/Languages.pic",
 		"Installer/Pictures/HDD.pic",
 		"Installer/Pictures/User.pic",
