Add 86 languages in alphabetical order

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -41,7 +41,93 @@
 		"Localizations/Hindi.lang",
 		"Localizations/Lolcat.lang",
 		"Localizations/Portuguese.lang",
-		"Localizations/Polish.lang"
+		"Localizations/Polish.lang",
+		"Localizations/Afrikaans.lang",
+		"Localizations/Albanian.lang",
+		"Localizations/Amharic.lang",
+		"Localizations/Armenian.lang",
+		"Localizations/Azerbaijani.lang",
+		"Localizations/Basque.lang",
+		"Localizations/Belarusian.lang",
+		"Localizations/Bosnian.lang",
+		"Localizations/Catalan.lang",
+		"Localizations/Cebuano.lang",
+		"Localizations/Chichewa.lang",
+		"Localizations/Corsican.lang",
+		"Localizations/Croatian.lang",
+		"Localizations/Czech.lang",
+		"Localizations/Danish.lang",
+		"Localizations/Esperanto.lang",
+		"Localizations/Estonian.lang",
+		"Localizations/Filipino.lang",
+		"Localizations/Frisian.lang",
+		"Localizations/Galician.lang",
+		"Localizations/Georgian.lang",
+		"Localizations/Greek.lang",
+		"Localizations/Gujarati.lang",
+		"Localizations/Haitian Creole.lang",
+		"Localizations/Hausa.lang",
+		"Localizations/Hawaiian.lang",
+		"Localizations/Hebrew.lang",
+		"Localizations/Hmong.lang",
+		"Localizations/Hungarian.lang",
+		"Localizations/Icelandic.lang",
+		"Localizations/Igbo.lang",
+		"Localizations/Indonesian.lang",
+		"Localizations/Irish.lang",
+		"Localizations/Javanese.lang",
+		"Localizations/Kannada.lang",
+		"Localizations/Kazakh.lang",
+		"Localizations/Khmer.lang",
+		"Localizations/Kurdish (Kurmanji).lang",
+		"Localizations/Kyrgyz.lang",
+		"Localizations/Lao.lang",
+		"Localizations/Latin.lang",
+		"Localizations/Latvian.lang",
+		"Localizations/Lithuanian.lang",
+		"Localizations/Luxembourgish.lang",
+		"Localizations/Macedonian.lang",
+		"Localizations/Malagasy.lang",
+		"Localizations/Malay.lang",
+		"Localizations/Malayalam.lang",
+		"Localizations/Maltese.lang",
+		"Localizations/Maori.lang",
+		"Localizations/Marathi.lang",
+		"Localizations/Mongolian.lang",
+		"Localizations/Myanmar (Burmese).lang",
+		"Localizations/Nepali.lang",
+		"Localizations/Norwegian.lang",
+		"Localizations/Odia.lang",
+		"Localizations/Pashto.lang",
+		"Localizations/Persian.lang",
+		"Localizations/Punjabi.lang",
+		"Localizations/Romanian.lang",
+		"Localizations/Samoan.lang",
+		"Localizations/Scots Gaelic.lang",
+		"Localizations/Serbian.lang",
+		"Localizations/Sesotho.lang",
+		"Localizations/Shona.lang",
+		"Localizations/Sindhi.lang",
+		"Localizations/Sinhala.lang",
+		"Localizations/Slovenian.lang",
+		"Localizations/Somali.lang",
+		"Localizations/Sundanese.lang",
+		"Localizations/Swahili.lang",
+		"Localizations/Swedish.lang",
+		"Localizations/Tajik.lang",
+		"Localizations/Tamil.lang",
+		"Localizations/Telugu.lang",
+		"Localizations/Thai.lang",
+		"Localizations/Turkish.lang",
+		"Localizations/Urdu.lang",
+		"Localizations/Uyghur.lang",
+		"Localizations/Uzbek.lang",
+		"Localizations/Vietnamese.lang",
+		"Localizations/Welsh.lang",
+		"Localizations/Xhosa.lang",
+		"Localizations/Yiddish.lang",
+		"Localizations/Yoruba.lang",
+		"Localizations/Zulu.lang"
 	},
 	required = {
 		-- Libraries
