Added global print() function & simple console application for output #3

--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -184,6 +184,9 @@
 		"Applications/3D Print.app/Localizations/Spanish.lang",
 		"Applications/3D Print.app/Extensions/.3dm/Icon.pic",
 		"Applications/3D Print.app/Extensions/.3dm/Context menu.lua",
+		-- Console
+		{ path="Applications/Console.app/Main.lua", id=1607 },
+		"Applications/Console.app/Icon.pic"
 	},
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
