--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -131,6 +131,8 @@
 		"Applications/Picture Edit.app/Tools/7.lua",
 		"Applications/Picture Edit.app/Tools/8.lua",
 		"Applications/Picture Edit.app/Tools/9.lua",
+		"Applications/Picture Edit.app/Localizations/English.lang",
+		"Applications/Picture Edit.app/Localizations/Russian.lang",
 		"Applications/Picture Edit.app/Extensions/.pic/Icon.pic",
 		-- Finder
 		{ path="Applications/Finder.app/Main.lua", id=175 },
