--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -134,6 +134,16 @@
 		"Applications/Picture Edit.app/Localizations/English.lang",
 		"Applications/Picture Edit.app/Localizations/Russian.lang",
 		"Applications/Picture Edit.app/Extensions/.pic/Icon.pic",
+		-- Picture View
+		{ path="Applications/Picture View.app/Main.lua" },
+		"Applications/Picture View.app/Icon.pic",
+		"Applications/Picture View.app/Icons/ArrowLeft.pic",
+		"Applications/Picture View.app/Icons/ArrowRight.pic",
+		"Applications/Picture View.app/Icons/Play.pic",
+		"Applications/Picture View.app/Icons/SetWallpaper.pic",
+		"Applications/Picture View.app/Localizations/English.lang",
+		"Applications/Picture View.app/Localizations/Russian.lang",
+		"Applications/Picture View.app/Extensions/.pic/Icon.pic",
 		-- Finder
 		{ path="Applications/Finder.app/Main.lua", id=175 },
 		"Applications/Finder.app/Icon.pic",
