--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -134,7 +134,7 @@
 		"Applications/Picture Edit.app/Localizations/English.lang",
 		"Applications/Picture Edit.app/Localizations/Russian.lang",
 		"Applications/Picture Edit.app/Extensions/.pic/Icon.pic",
-		"Applications/Picture Edit.app/Extensions/.pic/Context menu.pic",
+		"Applications/Picture Edit.app/Extensions/.pic/Context menu.lua",
 		-- Picture View
 		{ path="Applications/Picture View.app/Main.lua" },
 		"Applications/Picture View.app/Icon.pic",
@@ -145,7 +145,7 @@
 		"Applications/Picture View.app/Localizations/English.lang",
 		"Applications/Picture View.app/Localizations/Russian.lang",
 		"Applications/Picture View.app/Extensions/.pic/Icon.pic",
-		"Applications/Picture View.app/Extensions/.pic/Context menu.pic",
+		"Applications/Picture View.app/Extensions/.pic/Context menu.lua",
 		-- Finder
 		{ path="Applications/Finder.app/Main.lua", id=175 },
 		"Applications/Finder.app/Icon.pic",
