--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -182,6 +182,15 @@
 		"Applications/Settings.app/Localizations/Italian.lang",
 		"Applications/Settings.app/Localizations/Japanese.lang",
 		"Applications/Settings.app/Localizations/Dutch.lang",
+		-- Calendar
+		{ path="Applications/Calendar.app/Main.lua", shortcut = true },
+		"Applications/Calendar.app/Icon.pic",
+		"Applications/Calendar.app/Icons/ArrowLeft.pic",
+		"Applications/Calendar.app/Icons/ArrowRight.pic",
+		"Applications/Calendar.app/Icons/ArrowLeftBlack.pic",
+		"Applications/Calendar.app/Icons/ArrowRightBlack.pic",
+		"Applications/Calendar.app/Localizations/English.lang",
+		"Applications/Calendar.app/Localizations/Russian.lang",
 		-- 3D Print
 		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
 		"Applications/3D Print.app/Icon.pic",
